k3s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
# namespace: datasource-clj
spec:
  type: ClusterIP 
  selector:
    component: grafana
  ports:
  - port: 3000
    targetPort: 3000
