k3s/deployment.yaml
# kubectl apply -k .
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datasource
spec:
  replicas: 1
  selector:
    matchLabels:
      component: datasource
  template:
    metadata:
      labels:
        component: datasource
    spec:
      containers:
      # Data source backend serving  metrics accessed by Grafana. This
      # data source is accessed from Grafana at http://datasource, see
      # Service  definition  below.   When  in  development  you  will
      # probably  have  to  change  either  the  URL  or  the  Service
      # definition. See comments below ...
      - name: datasource
        # docker inspect f0bec0d/datasource-clj:0.1 | jq '.[0].RepoDigests[0]'
        image: f0bec0d/datasource-clj@sha256:c17e387826875c60f728fe7b65b0f47ea5d96e555215ce4c69f5f7e89a9c4c53
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      component: grafana
  template:
    metadata:
      labels:
        component: grafana
    spec:
      containers:
      # Grafana frontend for demo & devel. This comes from Docker Hub,
      # see https://hub.docker.com/r/grafana/grafana/tags
      - name: grafana
        image: grafana/grafana:7.0.0 # 6.7.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/etc/grafana/provisioning/datasources/"
          name: "datasources"
        - mountPath: "/etc/grafana/provisioning/dashboards/"
          name: "dashboard-providers"
        - mountPath: "/dashboards/"
          name: "dashboards"
        - mountPath: "/var/lib/grafana"
          name: "var-lib-grafana"
        #
        # SimpleJson  Plugin  ist  not  installed  by  default.   This
        # environment setting  will trigger a download  from Internets
        # on container  start. Consider setting https_proxy  if plugin
        # fails to  download.  The  original, "simple json"  [3], does
        # not seem  to be maintained.  Use  the SimPod Fork [1,  2] or
        # both in transition phase.
        #
        # [1] https://github.com/simPod/grafana-json-datasource
        # [2] https://grafana.com/grafana/plugins/simpod-json-datasource
        # [3] https://grafana.com/grafana/plugins/grafana-simple-json-datasource
      volumes:
      - name: "datasources"
        configMap:
          name: "datasources"
      - name: "dashboard-providers"
        configMap:
          name: "dashboard-providers"
      - name: "dashboards"
        configMap:
          name: "dashboards"
      - name: "var-lib-grafana"
        persistentVolumeClaim:
          claimName: "grafana"
---
#
# There  is  an  option  to  define a  Service  without  selectors  by
# specifying  the corresponding  Endpoints  explicitly.  We  separated
# Grafana and  Data Source into seprate  Pods --- in case  you want to
# point your Grafana to an external service using this thechnique.
#
# The followinf  "datasource" Service makes the  Data Source available
# to other Pods  including Grafana.  Grafana Config  can use hardcoded
# http://datasource  as  the  URL.  Resolving  Services  on  arbitrary
# appears cumbersome --- we assume and hardcode Port 80 here.
#
# [1] https://kubernetes.io/docs/concepts/services-networking/service/
#
apiVersion: v1
kind: Service
metadata:
  name: datasource
spec:
  type: ClusterIP
  # For development,  comment the selector  in the follwing  two lines
  # and uncomment the Endponts object below specifying the correct IP.
  selector:
    component: datasource
  ports:
  - port: 80
    targetPort: 8080
# ---
# apiVersion: v1
# kind: Endpoints
# metadata:
#   name: datasource
# subsets:
#   - addresses:
#       - ip: 192.168.0.4         # <- Specify your IP here
#     ports:
#       - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  selector:
    component: grafana
  ports:
  - port: 80
    targetPort: 3000
---
#
# We  assume here  that  *.localhost resolves  to  the local  machine.
# Following URLs  should be  directed to corresponding  Services, also
# with https:// protocoll:
#
#     http://grafana.localhost
#     http://datasource.localhost
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana.localhost
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: datasource
spec:
  rules:
  - host: datasource.localhost
    http:
      paths:
      - backend:
          serviceName: datasource
          servicePort: 80
