k3s/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      component: grafana
  template:
    metadata:
      labels:
        component: grafana
    spec:
#     volumes:
#     - name: grafana-claim
#       persistentVolumeClaim:
#         claimName: grafana-claim
      containers:
      - name: grafana
        image: grafana/grafana:6.4.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
#       volumeMounts:
#       - mountPath: /var/lib/grafana
#         name: grafana-claim
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    component: grafana
  ports:
  - port: 3000
    targetPort: 3000
---
#
# We assume here that *.localhost resolves to the local machine.  Following
# URLs should be directed to Grafana.
#
#     http://grafana.localhost
#     https://grafana.localhost
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  rules:
  - host: grafana.localhost
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
