k3s/ingress.yml
#
# We assume here that *.localhost resolves to the local machine.  Following
# URLs should be directed to Grafana.
#
#     http://grafana.localhost
#     https://grafana.localhost
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: grafana
spec:
  rules:
  - host: grafana.localhost
    http:
      paths: 
      - backend: 
          serviceName: grafana
          servicePort: 3000
